[fix] gap 수정

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -54,7 +54,7 @@
 }
 
 .gap-3 {
-  gap: 0.75rem;
+  gap: 2rem;
 }
 .gap-2{
   gap:2rem;
